[package]
name = "ergoblue"
version = "0.1.0"
authors = ["Ilya Labacheuski <ilya.labacheuski@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"